--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next": "^24.2.2",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.468.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
